# mm-nu_library_backend

./: .env  .gitignore  main.py  pyproject.toml
app/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  book.py  user.py
app/routers/: auth.py  book.py  user.py
app/schemas/: book.py  borrowing.py  user.py
migrations/: env.py
migrations/versions/: 55c918a253d4_initial_setup.py  5b067238b261_new_tables.py  bb0414e8790e_new_models.py  f12f87bae5df_updated_borrowings.py  fff80e8ecdfd_new_tables.py
